--- a/static/css/myapp.css
+++ b/static/css/myapp.css
@@ -32,16 +32,16 @@ html, body {max-width: 100vw; overflow-x: hidden}
     padding-bottom: 5px;
 }
 
-.messageText {
-    font-size: 24px;
-    font-weight: bold;
-}
-
 .messageDiv {
     width: 100%;
     background: white;
     padding: 20px;
     margin: 4px;
+}
+
+.messageText {
+    font-size: 24px;
+    font-weight: bold;
 }
 
 .createJobButton {
@@ -360,7 +360,9 @@ input[type=checkbox].checkBox:checked:after {
 }
 
 .preCode {
-    margin: 0px 32px 20px 32px;
+    background: white;
+    padding: 5px 0px 20px 0px;
+    margin: 0px 32px 0px 32px;
 }
 
 .editButton {
