Added more code references.

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -1,11 +1,25 @@
+
 {{extend 'layout.html'}}
 
+<!--
+    Layout template:
+            http://gmodstore.com 
+
+    Vue.js documentation:
+            https://vuejs.org/v2/guide/index.html
+
+    Bootstrap 4.0:
+            https://getbootstrap.com/docs/4.0/getting-started/introduction/
+    
+    jQuery:
+            https://jquery.com/ -->
+
 {{block head}}
-    <!-- Spectrum -->
+    <!-- Spectrum: http://bgrins.github.io/spectrum/ -->
     <link href="{{=URL('static','css/spectrum.min.css')}}" rel="stylesheet" type="text/css"/>
     <script src="{{=URL('static','js/spectrum.min.js')}}"></script>
     
-    <!-- Tagify -->
+    <!-- Tagify: https://yaireo.github.io/tagify/ -->
     <script src="{{=URL('static','js/tagify.min.js')}}"></script>
     
     <!-- jQuery UI -->
