--- a/views/default/create.html
+++ b/views/default/create.html
@@ -1,11 +1,18 @@
 {{extend 'layout.html'}}
 
+<!--
+    Bootstrap 4.0:
+            https://getbootstrap.com/docs/4.0/getting-started/introduction/
+    
+    jQuery:
+            https://jquery.com/ -->
+
 {{block head}}
-    <!-- Spectrum -->
+    <!-- Spectrum: http://bgrins.github.io/spectrum/ -->
     <link href="{{=URL('static','css/spectrum.min.css')}}" rel="stylesheet" type="text/css"/>
     <script src="{{=URL('static','js/spectrum.min.js')}}"></script>
     
-    <!-- Tagify -->
+    <!-- Tagify: https://yaireo.github.io/tagify/ -->
     <script src="{{=URL('static','js/tagify.min.js')}}"></script>
     
     <!-- jQuery UI -->
@@ -20,10 +27,12 @@
     <script src="{{=URL('static', 'js/models_weps.js')}}"></script>
     
     <!-- URLs -->
-    <script>
-        var create_job_url = "{{=URL('api', 'create_job', user_signature=True)}}";
-        var default_url = "{{=URL('default', 'index', vars=dict(public='true'))}}";
+    <script>        
         var home_url = "{{=URL('default', 'index', vars=dict(public='false'))}}";
+        var default_url = "{{=URL('default', 'index', vars=dict(public='true'))}}";
+        
+        var create_job_url = "{{=URL('api', 'create_job', user_signature=True)}}";
+        
         var image_url = "{{=URL('static', 'images/player_models')}}";
     </script>
 {{end}}
@@ -78,7 +87,7 @@
             <div id="job_info" v-if="!showing_player_models" class="row">
                 <div class="col-md-6 col-sm-6 margin10TopBottom">
                     <div class="form-group">
-                        <label for="job_job_id">ID</label>
+                        <label for="job_job_id">ID<span class="red">*</span></label>
                         <input v-model="job_job_id" v-on:keypress="is_job_id" id="job_job_id_input" class="form-control" placeholder="DOCTOR" maxlength=25/>
                         
                         <transition name="slide-fade">
@@ -87,7 +96,7 @@
                     </div>
                     
                     <div class="form-group">
-                        <label for="job_name">Name</label>
+                        <label for="job_name">Name<span class="red">*</span></label>
                         <input v-model="job_name" v-on:keypress="is_job_name" id="job_name_input" class="form-control" placeholder="Doctor" maxlength=25/>
                         
                         <transition name="slide-fade">
@@ -96,7 +105,7 @@
                     </div>
                     
                     <div class="form-group">
-                        <label for="job_description">Description</label>
+                        <label for="job_description">Description<span class="red">*</span></label>
                         <input v-model="job_desc" v-on:keypress="is_job_description" id="job_desc_input" class="form-control" placeholder="Heal the community." maxlength=100/>
                         
                         <transition name="slide-fade">
@@ -145,7 +154,7 @@
                 
                 <div class="col-md-6 col-sm-6 margin10TopBottom">                    
                     <div class="form-group">
-                        <label for="job_color">Color</label>
+                        <label for="job_color">Color<span class="red">*</span></label>
                         <br/>
                         
                         <div style="min-height: 38px;">
@@ -158,7 +167,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="job_salary">Salary</label>
+                        <label for="job_salary">Salary<span class="red">*</span></label>
                         <br/>
                         <input v-model="job_salary" id="job_salary_input" class="form-control" type="number" min=0 step=1 placeholder="45" value=""/>
                         
@@ -168,7 +177,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="job_salary">Max players</label>
+                        <label for="job_salary">Max players<span class="red">*</span></label>
                         <br/>
                         <input v-model="job_max_players" id="job_max_players_input" class="form-control" type="number" min=1 step=1 placeholder="2" value=""/>
                         
@@ -178,7 +187,7 @@
                     </div>
                     
                     <div class="form-group">
-                        <label>Type</label>
+                        <label>Type<span class="red">*</span></label>
                         <select class="form-control" id="job_tag_input" v-model="job_tag">
                             <option value="Citizen" selected>Citizen</option>
                             <option value="Commercial">Commercial</option>
@@ -207,7 +216,7 @@
                     </div>
                                         
                     <div class="form-group">
-                        <label>Miscellaneous</label>
+                        <label>Miscellaneous<span class="red">*</span></label>
                         <br/>
                        
                         <div class="form-check">
