--- a/views/layout.html
+++ b/views/layout.html
@@ -1,3 +1,10 @@
+<!--
+    Bootstrap 4.0:
+            https://getbootstrap.com/docs/4.0/getting-started/introduction/
+    
+    jQuery:
+            https://jquery.com/ -->
+
 <html>
     <head>
         <meta charset="utf-8">
