--- a/views/default/create.html
+++ b/views/default/create.html
@@ -129,7 +129,7 @@
                     </div>
                     
                     <div class="form-group">
-                        <label for="job_custom_model">Workshop Player Model</label>
+                        <label for="job_custom_model">Workshop player model</label>
                         
                         <input id="job_workshop_input" class="form-control" placeholder="Steam Workshop URL or Workshop ID" maxlength=200 v-model="job_workshop"/>
                         
@@ -137,7 +137,7 @@
                             <div v-if="job_errors.job_workshop != null" class="formError">${ job_errors.job_workshop }</div>
                         </transition>
                         
-                        <label for="job_suggested_model" style="margin-top: 10px;">Suggested Character</label>
+                        <label for="job_suggested_model" style="margin-top: 10px;">Character</label>
                         
                         <input id="job_suggested_model_input" class="form-control" placeholder="Specify a character (e.g. Deadpool)" maxlength=50 v-model="job_suggested_model" v-on:keypress="is_job_description"/>
                         
@@ -169,7 +169,14 @@
                     <div class="form-group">
                         <label for="job_salary">Salary<span class="red">*</span></label>
                         <br/>
-                        <input v-model="job_salary" id="job_salary_input" class="form-control" type="number" min=0 step=1 placeholder="45" value=""/>
+                        
+                        <div class="input-group mb-3" style="margin-bottom: 0px !important;">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">$</span>
+                            </div>
+
+                            <input v-model="job_salary" id="job_salary_input" class="form-control" type="number" min=0 step=1 placeholder="45" value=""/>
+                        </div>
                         
                         <transition name="slide-fade">
                             <div v-if="job_errors.job_salary != null" class="formError">${ job_errors.job_salary }</div>
